# Dicta

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
Dicta/: AppDelegate.swift  DictaApp.swift  DictationController.swift
Dicta.xcodeproj/: project.pbxproj
Dicta/Audio/: AudioRecorder.swift  AudioSessionGuard.swift
Dicta/Dashboard/: DashboardView.swift  DashboardWindowController.swift  Sidebar.swift
Dicta/Diagnostics/: DiagnosticsManager.swift  DiagnosticsView.swift  Logger.swift
Dicta/Hotkey/: CarbonHotkeyEngine.swift  EventTapHotkeyEngine.swift  Hotkey.swift  HotkeyEngine.swift  HotkeyManager.swift  Keybind.swift  KeybindRecorder.swift  KeybindRecorderView.swift
Dicta/Insertion/: AccessibilityTyperInserter.swift  InsertionManager.swift  PasteFailureNotifier.swift  PasteboardInserter.swift
Dicta/MenuBar/: MenuViewModel.swift  StatusItemController.swift
Dicta/Models/: DictionaryEntry.swift  Note.swift  Snippet.swift  StyleProfile.swift
Dicta/Permissions/: OnboardingView.swift  PermissionsManager.swift
Dicta/Resources/: Info.plist
Dicta/Settings/: HotkeyRecorderView.swift  SettingsModel.swift  SettingsView.swift
Dicta/Storage/: AppDataStore.swift  AppSupportPaths.swift  JSONStore.swift  StorageProtocol.swift
cloud/: Dockerfile  README.md  pyproject.toml
cloud/app/: __init__.py  auth.py  limits.py  main.py  postprocess.py  quota.py  settings.py  storage.py
cloud/app/asr/: __init__.py  audio.py  whisper_backend.py
docs/: UPDATES.md  appcast.xml  index.html
scripts/: install_local.sh  sparkle_tools.sh  update_appcast.rb
(+29 files in other folders)
