[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicta-cloud"
version = "0.1.0"
description = "Minimal cloud transcription API for Dicta"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "slowapi>=0.1.9,<1.0.0",
  "faster-whisper>=1.1.1,<2.0.0",
  "pydub>=0.25.1,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
